Fix some tracks not showing properly in queue

--- a/app/public/stylesheets/scss/queue.scss
+++ b/app/public/stylesheets/scss/queue.scss
@@ -50,8 +50,8 @@
 
     img {
       display: block;
-      width: 2em;
-      height: 2em;
+      width: 2.5em;
+      height: 2.5em;
       border-radius: 0.2em;
       transition: 0.2s;
     }
